fix card dimensions to prevent screen jumping

--- a/styles/builder.less
+++ b/styles/builder.less
@@ -1,10 +1,16 @@
 .container-card{
+	height:500px;
+	width: 480px;
+
 	border: 1px solid black;
 	padding: 10px;
 	text-align: center;
 
 	.card{
 		.cardtext{
+			padding: 5px;
+			max-height: 190px;
+			overflow-y: auto;
 			background: lightgray;
 		}
 
